# chad

./: .gitignore  README.md  TODO.md  architecture_manifesto.md  mvp.md  pyproject.toml
chad/: __init__.py
chad/core/: __init__.py  errors.py  interfaces.py  metrics.py  monitoring.py  validation.py
chad/core/config/: provider.py
tests/core/: test_errors.py  test_interfaces.py  test_metrics.py  test_monitoring.py  test_validation.py
tests/core/config/: test_provider.py
