[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chad"
version = "0.1.0"
description = "Content Handling and Distribution System"
authors = [
    {name = "CHAD Team"}
]
dependencies = [
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 